Limpar campos de Pesqueiro e Especies Capturadas, em Entrevistas, apos o submit do form

--- a/application/views/scripts/arrasto-fundo/editar.phtml
+++ b/application/views/scripts/arrasto-fundo/editar.phtml
@@ -157,11 +157,10 @@
          
     <div class="esquerda">
     <input type="submit" size="50" value="Salvar Alterações" />
-    </div>
-
-    </div>    
-</form>
-    <form>
+    </div>  
+    </form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden"  name="id_entrevista"  value="<?= $this->entrevista['af_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
