--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -209,8 +209,8 @@
             </div>      
         </fieldset>
     </form>
-</div>
-   <form>
+</div>  
+    <form id="formEntrevistas">
        <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['lf_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
