--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -182,9 +182,8 @@
          <br/>
         </fieldset>
     </form>
-</div>
-
-<form>
+</div>  
+    <form id="formEntrevistas">
     <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['lin_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
