--- a/application/views/scripts/ratoeira/editar.phtml
+++ b/application/views/scripts/ratoeira/editar.phtml
@@ -166,9 +166,9 @@
             </div>
 
         </fieldset>
-        </form>
-</div>
-    <form>
+    </form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['rat_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
