--- a/application/views/scripts/tarrafa/editar.phtml
+++ b/application/views/scripts/tarrafa/editar.phtml
@@ -144,7 +144,7 @@
 </div>
 <br/>
 <br/>
-<form id="formulario" >
+    <form id="formEntrevistas">
     <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['tar_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
