--- a/application/views/scripts/calao/editar.phtml
+++ b/application/views/scripts/calao/editar.phtml
@@ -160,9 +160,9 @@
             <div class="esquerda">
                  <input type="submit" size="50" value="Salvar Alterações" />
             </div>
-    </form>        
-</div>
-<form>
+    </form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['cal_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
