--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -161,9 +161,9 @@
                 </div>
             </div>
         </fieldset> 
-    </form> 
-</div>
-<form>
+    </form>
+</div>  
+    <form id="formEntrevistas">
     <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['cml_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
