--- a/application/views/scripts/jerere/editar.phtml
+++ b/application/views/scripts/jerere/editar.phtml
@@ -167,9 +167,9 @@
             </div>
     
       </fieldset>
-</div>   
- </form>
-    <form>
+    </form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['jre_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
