--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -167,8 +167,8 @@
 
         </fieldset>
     </form>
-</div>
-    <form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['sir_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
