--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -202,8 +202,8 @@
             </div>
         </fieldset>
     </form>
-</div>
-    <form>
+</div>  
+    <form id="formEntrevistas">
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['vp_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
