--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -26,6 +26,7 @@
                     <option value="15">Entrevistas (completo) - XLS</option>
                     <option value="16">Biometrias de Camarão - XLS</option>
                     <option value="17">Biometrias de Peixes - XLS</option>
+                    <option value="17">CPUE (todas as artes) - XLS</option>
                 </select>
             </div>
             <div class="form-esq">
