Relatórios CPUE e Atividades

--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -26,7 +26,8 @@
                     <option value="15">Entrevistas (completo) - XLS</option>
                     <option value="16">Biometrias de Camarão - XLS</option>
                     <option value="17">Biometrias de Peixes - XLS</option>
-                    <option value="17">CPUE (todas as artes) - XLS</option>
+                    <option value="18">CPUE (todas as artes) - XLS</option>
+                    <option value="19">Artes de Pesca Por Porto</option>
                 </select>
             </div>
             <div class="form-esq">
@@ -92,7 +93,7 @@
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "consulta-padrao", "action" => "entrevistasbyhora"), null, true) ?>"target="_blank">Entrevistas por hora de chegada</a></li>
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores</a></li>      
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "pescador", "action" => "relatorioespecialista"), null, true) ?>"target="_blank" class="relatorio">Pescadores Especialistas</a></li>
-        <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relartesbyporto"), null, true) ?>"target="_blank" class="relatorio">Artes de Pesca Por Portos (NOVO)</a></li>
+<!--        <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relartesbyporto"), null, true) ?>"target="_blank" class="relatorio">Artes de Pesca Por Portos (NOVO)</a></li>-->
     </ul>               
 </fieldset>
 
