--- a/application/views/scripts/porto/barra.phtml
+++ b/application/views/scripts/porto/barra.phtml
@@ -101,68 +101,68 @@
        ]
    };
 /////////////////////////////////////////////////////////////////////////////////////////////////////
-   var entrevistasByMes2 = {
-       labels: <?= $this->quantLabelsSiripoia ?>,
-       datasets: [
-           {
-               label: "Quantidade de Entrevistas Por Mês",
-               fillColor: "rgba(95,48,43,.8)",
-               strokeColor: "rgba(95,48,43,1)",
-               pointColor: "rgba(95,48,43,1)",
-               pointStrokeColor: "#fff",
-               pointHighlightFill: "#fff",
-               pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantEntrevistasSiripoia ?>
-           }
-       ]
-   };
-      var capturaByMes2 = {
-       labels: <?= $this->countCaptLabelsSiripoia ?>,
-       datasets: [
-           {
-               label: "Captura total por mês",
-               fillColor: "rgba(95,48,43,.8)",
-               strokeColor: "rgba(95,48,43,1)",
-               pointColor: "rgba(95,48,43,1)",
-               pointStrokeColor: "#fff",
-               pointHighlightFill: "#fff",
-               pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoSiripoia ?>
-           }
-       ]
-   };
-   var Embarcacoes2 = {
-       labels: <?= $this->labelBarcosSiripoia ?>,
-       datasets: [
-           {
-               label: "Barcos Mais Monitorados",
-               fillColor: "rgba(95,48,43,.8)",
-               strokeColor: "rgba(95,48,43,1)",
-               pointColor: "rgba(95,48,43,1)",
-               pointStrokeColor: "#fff",
-               pointHighlightFill: "#fff",
-               pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantBarcosSiripoia ?>
-           }
-       ]
-   };
-   
+//   var entrevistasByMes2 = {
+//       labels: <?= $this->quantLabelsSiripoia ?>,
+//       datasets: [
+//           {
+//               label: "Quantidade de Entrevistas Por Mês",
+//               fillColor: "rgba(95,48,43,.8)",
+//               strokeColor: "rgba(95,48,43,1)",
+//               pointColor: "rgba(95,48,43,1)",
+//               pointStrokeColor: "#fff",
+//               pointHighlightFill: "#fff",
+//               pointHighlightStroke: "rgba(95,48,43,1)",
+//               data: <?= $this->quantEntrevistasSiripoia ?>
+//           }
+//       ]
+//   };
+//      var capturaByMes2 = {
+//       labels: <?= $this->countCaptLabelsSiripoia ?>,
+//       datasets: [
+//           {
+//               label: "Captura total por mês",
+//               fillColor: "rgba(95,48,43,.8)",
+//               strokeColor: "rgba(95,48,43,1)",
+//               pointColor: "rgba(95,48,43,1)",
+//               pointStrokeColor: "#fff",
+//               pointHighlightFill: "#fff",
+//               pointHighlightStroke: "rgba(95,48,43,1)",
+//               data: <?= $this->countCaptPesoSiripoia ?>
+//           }
+//       ]
+//   };
+//   var Embarcacoes2 = {
+//       labels: <?= $this->labelBarcosSiripoia ?>,
+//       datasets: [
+//           {
+//               label: "Barcos Mais Monitorados",
+//               fillColor: "rgba(95,48,43,.8)",
+//               strokeColor: "rgba(95,48,43,1)",
+//               pointColor: "rgba(95,48,43,1)",
+//               pointStrokeColor: "#fff",
+//               pointHighlightFill: "#fff",
+//               pointHighlightStroke: "rgba(95,48,43,1)",
+//               data: <?= $this->quantBarcosSiripoia ?>
+//           }
+//       ]
+//   };
 //   
-   var especiesCapturadas2 = {
-       labels: <?= $this->labelCapturaSiripoia ?>,
-       datasets: [
-           {
-               label: "Quantidade",
-               fillColor: "rgba(95,48,43,.8)",
-               strokeColor: "rgba(95,48,43,1)",
-               pointColor: "rgba(95,48,43,1)",
-               pointStrokeColor: "#fff",
-               pointHighlightFill: "#fff",
-               pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->pesoCapturaSiripoia ?>
-           }
-       ]
-   };
+////   
+//   var especiesCapturadas2 = {
+//       labels: <?= $this->labelCapturaSiripoia ?>,
+//       datasets: [
+//           {
+//               label: "Quantidade",
+//               fillColor: "rgba(95,48,43,.8)",
+//               strokeColor: "rgba(95,48,43,1)",
+//               pointColor: "rgba(95,48,43,1)",
+//               pointStrokeColor: "#fff",
+//               pointHighlightFill: "#fff",
+//               pointHighlightStroke: "rgba(95,48,43,1)",
+//               data: <?= $this->pesoCapturaSiripoia ?>
+//           }
+//       ]
+//   };
 
     
     window.onload = function(){
