--- a/application/views/scripts/porto/mamoa.phtml
+++ b/application/views/scripts/porto/mamoa.phtml
@@ -222,7 +222,7 @@ Figura: Mamoã.
 
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (n)</legend>
+    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (%)</legend>
   <canvas id="ArtesMonitoradas" style="width:100%;"></canvas>
 </div>
 <br/>
