--- a/application/views/scripts/porto/amendoeira.phtml
+++ b/application/views/scripts/porto/amendoeira.phtml
@@ -317,7 +317,7 @@ Figura: Amendoeira.
 
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (n)</legend>
+    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (%)</legend>
   <canvas id="ArtesMonitoradas" style="width:100%;"></canvas>
 </div>
 <br/>
