--- a/application/views/scripts/porto/aritagua.phtml
+++ b/application/views/scripts/porto/aritagua.phtml
@@ -127,7 +127,7 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoRatoeira ?>
+               data: <?= $this->countCaptQuantidadeRatoeira ?>
            }
        ]
    };
@@ -221,7 +221,7 @@ Figura: Aritaguá.
 
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (n)</legend>
+    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (%)</legend>
   <canvas id="ArtesMonitoradas" style="width:100%;"></canvas>
 </div>
 <br/>
