--- a/application/views/scripts/porto/serra.phtml
+++ b/application/views/scripts/porto/serra.phtml
@@ -220,7 +220,7 @@ Figura: Pé de Serra.
 
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (n)</legend>
+    <legend>Gráfico 1: Artes de Pesca Mais Monitoradas (%)</legend>
   <canvas id="ArtesMonitoradas" style="width:100%;"></canvas>
 </div>
 <br/>
