--- a/application/views/scripts/index-admin/index.phtml
+++ b/application/views/scripts/index-admin/index.phtml
@@ -15,7 +15,7 @@
 </div>
 
 <div class="menu-relatorios">
-    <a class="link-rel" href="#">
+    <a class="link-rel" href="<?= $this->url(array("controller" => "barcos", "action" => "indexrelatorio"), null, true) ?>">
         <img src="img/barco-icon.png"/><br/>
         <span class="legenda">Embarcações</span>
     </a>
