--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -1,5 +1,11 @@
-
-
+<!--<script>
+  $( "#openDialog" ).click(function() {
+      $( "#dialog" ).dialog( "open" );
+    });
+  </script>
+<div id="dialog" title="Carregando">
+  <p>O relatório está sendo carregado, por favor, aguarde.</p>
+</div>-->
 <div id="titulos">
     <h2>Relatórios</h2>
 </div>
@@ -76,7 +82,7 @@
             </div>
         
             <div class="form-esq">     
-                <input type="submit" value="Relatório"/>
+                <input type="submit" value="Relatório" id="openDialog"/>
             </div>
     </fieldset>
     </div>
