--- a/application/views/scripts/barcos/indexrelatorio.phtml
+++ b/application/views/scripts/barcos/indexrelatorio.phtml
@@ -3,9 +3,10 @@
     <h3>Barcos</h3>
 </div>
 
-<h3>Desembarque</h3>
+<h3>Relatórios</h3>
 <ul>
-    <li><a href="<?= $this->url(array("controller" => "barcos", "action" => "relatorio"), null, true) ?>"target="_blank" class="relatorio">Embarcações</a></li>
+    <li><img src="img/xls-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "relatorios", "action" => "embarcacaodetalhada"), null, true) ?>" target="_blank" class="relatorio">Embarcações Detalhadas</a></li>
+    <li><img src="img/pdf-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "barcos", "action" => "relatorio"), null, true) ?>" target="_blank" class="relatorio">Lista de Embarcações</a></li>
 </ul>
 
 <h3>Tabelas conjuntas</h3>
