--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -37,6 +37,7 @@
                     <option value="18">CPUE (todas as artes) - XLS</option>
                     <option value="19">Artes de Pesca Por Porto</option>
                     <option value="20">Estimativas de Captura</option>
+                    <option value="21">Entrevistas (completo - RESUMIDO) - XLS</option>
                 </select>
             </div>
             <div class="form-esq">
