--- a/application/views/scripts/vara-pesca/visualizar.phtml
+++ b/application/views/scripts/vara-pesca/visualizar.phtml
@@ -15,6 +15,7 @@
             <input class="busca" name="buscaEntrevistas" placeholder="Buscar Entrevista"/><br/>
         <table>
             <tr>
+                <th>Contagem</th>
                 <th>Ficha Diária</th>
                 <th>Monitoramento</th>
                 <th>Entrevista</th>
@@ -23,13 +24,14 @@
                 <th>Barco</th>
             </tr>
 
-            <?php foreach ($this->dados as $key => $entrevista): ?>
+            <?php $i=1; foreach ($this->dados as $key => $entrevista): ?>
                 <tr>
+                    <td><?= $i++ ?></td>
                     <td><?= $entrevista['fd_id']?></td>
                     <td><?= $entrevista['mnt_id'] ?></td>
                     <td><?= $entrevista['vp_id'] ?></td>
                     <td><?= $entrevista['tp_nome'] ?></td>
-                     <td><?= $entrevista['tp_apelido'] ?></td>
+                    <td><?= $entrevista['tp_apelido'] ?></td>
                     <td><?= $entrevista['bar_nome'] ?></td>
 
                     <td class="td-botao">
