--- a/application/views/scripts/porto/cpue.phtml
+++ b/application/views/scripts/porto/cpue.phtml
@@ -37,8 +37,8 @@
 			whiskerWidth : 0.75,
 			scaleOverride: true,
 			scaleStartValue: 0,
-			scaleSteps: 15,
-			scaleStepWidth: 20,
+			scaleSteps: <?=$this->scale?>,
+			scaleStepWidth: 15,
 			bezierCurve: true,
 			datasetFill: false,
 			connectingLine : true,
